Добавляет адаптацию всех страниц (#10)

--- a/source/styles/blocks/history.scss
+++ b/source/styles/blocks/history.scss
@@ -40,6 +40,7 @@
   color: $optional-color;
   margin: 0;
   margin-bottom: 40px;
+  padding-top: 25px;
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
