--- a/source/styles/blocks/feature.scss
+++ b/source/styles/blocks/feature.scss
@@ -19,7 +19,7 @@
 .feature__item {
   position: relative;
   background-color: #f2f2f2;
-  padding: 30px  18px;
+  padding: 24px 20px 18px;
   margin-bottom: 20px;
 
   &--slim::before {
@@ -147,7 +147,8 @@
 .feature__description {
   margin: 0;
   border-bottom: 1px solid #d9d9d9;
-  margin-bottom: 23px;
+  margin-bottom: 15px;
+  padding-bottom: 23px;
 
   @media (min-width: $tablet-width) {
     width: 340px;
