--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,6 +1,21 @@
 @use "../common/fonts.scss" ;
 @use "../common/variables.scss" ;
 
+.social {
+  padding: 20px 74px;
+  list-style-type: none;
+  margin: 0;
+  display: flex;
+  gap: 24px;
+  justify-self: center;
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #d9d9d9;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
+}
+
 .social__link {
   display: block;
   width: 28px;
