Добавляет адаптацию всех страниц (#11)

--- a/source/styles/blocks/about-product.scss
+++ b/source/styles/blocks/about-product.scss
@@ -2,94 +2,106 @@
 @use "../common/variables.scss" ;
 
 .about-product {
-  margin-top: 20px;
-
+  padding-top: 13px;
+  padding-bottom: 26px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 45px;
+    padding-top: 45px;
+    padding-bottom: 55px;
     border-bottom: 1px solid #e6e6e6;
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: 70px;
+    padding-top: 70px;
+    padding-bottom: 75px;
     border-bottom: none;
   }
 }
 
-.about-product__title {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 36px;
-  line-height: 40px;
-  color: $optional-color;
-  margin: 0;
-  margin-bottom: 40px;
+.about-product__container {
+  padding: 0 20px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 32px;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
+}
+
+.about-product__title {
+  margin: 0;
+  margin-bottom: 37px;
+  font-family: $secondary-font;
+  font-weight: 400;
+  font-size: 36px;
+  color: #000000;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 36px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 38px;
   }
 }
 
 .about-product__list {
   margin: 0;
+  padding: 0;
   list-style-type: none;
+  counter-reset: about-product__item;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
     display: grid;
-    grid-template-columns: repeat(2, 250px);
-    gap: 135px 135px;
-    width: 708px;
-    counter-reset: number 0;
-    margin-bottom: 94px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 60px;
   }
 
   @media (min-width: $desktop-width) {
-    display: flex;
-    column-gap: 77px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
   }
 }
 
 .about-product__item {
   position: relative;
-  margin-bottom: 20px;
-  display: flex;
-  flex-wrap: wrap;
+  padding-left: 80px;
+  margin-bottom: 26px;
+  font-size: 14px;
+  line-height: 18px;
 
   &::before {
     content: "";
-    display: block;
-    background-color: $bg-color-green;
+    position: absolute;
+    top: -3px;
+    left: 0;
     width: 60px;
     height: 60px;
+    background-color: $bg-basic-green;
   }
 
   &--leaf::before {
     content: "";
-    background-size: 30px 32px;
-    background-repeat: no-repeat;
-    background-position: center;
+    display: inline-block;
+    vertical-align: middle;
+    background-size: 25px 28px;
     background-image: url("../../icons/stack.svg#leaf-icon");
-
-    @media (min-width: $tablet-width) {
-      width: 80px;
-      height: 80px;
-    }
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
   }
 
   &--water::before {
     content: "";
-    background-image: url("../../icons/stack.svg#powder-icon");
-    background-size: 26px 29px;
+    display: inline-block;
+    vertical-align: middle;
+    background-size: 25px 28px;
+    background-image: url("../../icons/powder-icon.svg");
+    background-position: 50% 50%;
     background-repeat: no-repeat;
-    background-position: center;
-
-    @media (min-width: $tablet-width) {
-      width: 80px;
-      height: 80px;
-    }
   }
 
   &--cutlery::before {
@@ -97,14 +109,9 @@
     display: inline-block;
     vertical-align: middle;
     background-size: 25px 28px;
-    background-image: url("../../icons/stack.svg#eat-icon");
+    background-image: url("../../icons/eat-icon.svg");
     background-position: 50% 50%;
     background-repeat: no-repeat;
-
-    @media (min-width: $tablet-width) {
-      width: 80px;
-      height: 80px;
-    }
   }
 
   &--time::before {
@@ -112,53 +119,58 @@
     display: inline-block;
     vertical-align: middle;
     background-size: 25px 28px;
-    background-image: url("../../icons/stack.svg#time-icon");
+    background-image: url("../../icons/time-icon.svg");
     background-position: 50% 50%;
     background-repeat: no-repeat;
+  }
 
-    @media (min-width: $tablet-width) {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/2;
+    margin-bottom: 0;
+    padding: 35px 80px 50px 0;
+    font-size: 16px;
+    line-height: 24px;
+
+    &:nth-child(even) {
+      grid-column: 2/3;
+    }
+
+    &::before {
+      position: static;
+      display: block;
+      margin-bottom: 31px;
       width: 80px;
       height: 80px;
     }
-  }
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 0;
-    display: block;
-    counter-increment: number;
-
 
     &::after {
-      content: counter(number);
+      content: counter(about-product__item);
+      counter-increment: about-product__item;
+      position: absolute;
+      top: 0;
+      right: 80px;
+      width: 136px;
+      height: 280px;
+      text-align: center;
+      font-family: $secondary-font;
+      color: #f2f2f2;
       font-size: 280px;
       line-height: 280px;
-      color: #f2f2f2;
-      position: absolute;
-      font-family: $additional-font;
-      font-weight: $font-weight;
       z-index: -1;
-      top: -42px;
-      right: 0;
-      display: block;
-      width: 136px;
     }
   }
-}
 
-.about-product__description {
-  font-family: $primary-font;
-  font-weight: $font-weight;
-  font-size: 14px;
-  line-height: 18px;
-  color: $base-color-text;
-  width: 200px;
-  margin-left: 20px;
+  @media (min-width: $desktop-width) {
+    grid-column: auto;
+    width: 320px;
 
-  @media (min-width: $tablet-width) {
-    margin-left: 0;
-    margin-top: 31px;
-    font-size: 16px;
-    line-height: 24px;
-    width: 245px;
+    &:nth-child(even) {
+      grid-column: auto;
+    }
+
+    &::after {
+      top: -5;
+      right: 75;
+    }
   }
 }
