--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,41 +1,56 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
-
 .catalog {
-  margin-top: 27px;
+  padding-top: 27px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 65px;
+    padding-top: 65px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 48px;
+  }
+}
+
+.catalog__container {
+  margin: 0 auto;
+  max-width: 320px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 708px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1220px;
   }
 }
 
 .catalog__title {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 36px;
-  line-height: 36px;
-  color: $optional-color;
   margin: 0;
-  margin-bottom: 41px;
-  border-bottom: 1px solid #ebebeb;
+  margin-left: 20px;
+  margin-bottom: 38px;
+  font-family: $secondary-font;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 36px;
+  color: #000000;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 165px;
-    border: none;
+    margin-left: 0;
     font-size: 60px;
     line-height: 60px;
+    margin-bottom: 84px;
+    border-bottom: none;
   }
 }
 
-
 .catalog__list {
   @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 60px;
+    display: grid;
+    grid-template-columns: repeat(4, 132px);
+    gap: 60px;
   }
 
   @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 245px);
     column-gap: 80px;
   }
 }
@@ -44,28 +59,46 @@
   display: grid;
   grid-template-columns: 140px 140px;
   grid-template-rows: repeat(3, auto);
-  padding-top: 20px;
-  padding-bottom: 25px;
+  padding: 22px 20px 24px;
   border-top: 1px solid #ebebeb;
   border-bottom: 1px solid #ebebeb;
 
+  &:first-child {
+    border-top: 2px solid #ebebeb;
+  }
+
   @media (min-width: $tablet-width) {
-    background-color: #f2f2f2;
-    width: 324px;
-    margin-bottom: 141px;
-    display: block;
-    padding: 0;
+    grid-template-columns: 250px;
+    padding: 0 37px 40px;
+    min-height: 511px;
+    background-image: linear-gradient(to bottom, #ffffff 82px, #f2f2f2 82px);
+    border: none;
+
+    &:first-child {
+      border-top: none;
+    }
+
+    &:nth-child(odd) {
+      grid-column: 1/3;
+    }
+
+    &:nth-child(even) {
+      grid-column: 3/5;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    width: 245px;
-    margin-bottom: 144px;
-  }
-}
+    padding: 0;
+    padding-bottom: 40px;
 
-.catalog__item-image {
-  margin: 0 auto;
-  display: block;
+    &:nth-child(odd) {
+      grid-column: auto;
+    }
+
+    &:nth-child(even) {
+      grid-column: auto;
+    }
+  }
 }
 
 .catalog__image-link {
@@ -74,8 +107,18 @@
   place-self: center center;
 
   @media (min-width: $tablet-width) {
-    top: -70px;
-    position: relative;
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    place-self: flex-start center;
+    margin-top: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 12px;
+
+    &--margin {
+      margin-top: 27px;
+    }
   }
 }
 
@@ -83,128 +126,162 @@
   grid-column: 2/3;
   grid-row: 1/2;
   text-decoration: none;
-}
 
-.catalog__item-link {
-  text-decoration: none;
+  @media (min-width: $tablet-width) {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
 }
 
 .catalog__item-title {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 16px;
-  line-height: 20px;
-  color: $ad-special_dark-grey;
   margin: 0;
   margin-bottom: 14px;
+  padding-right: 50px;
+  font-family: $secondary-font;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #222222;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
+    margin-top: 19px;
+    padding: 0 50px;
     text-align: center;
     font-size: 20px;
     line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 50px;
   }
 }
 
 .catalog__info {
   margin: 0;
-  margin-bottom: 17px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  font-size: 12px;
+  line-height: 16px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 32px;
-    padding: 0 37px;
+    margin-top: 20px;
   }
 
   @media (min-width: $desktop-width) {
     margin-bottom: 32px;
-    padding: 0 38px;
+    padding: 0 42px;
   }
 }
 
 .catalog__info-title {
-  font-weight: $font-weight;
   font-size: 12px;
   line-height: 16px;
-  color: $base-color-text;
+  color: #111111;
+  border-bottom: 1px solid #cdcdcd;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
   }
+}
+
+.catalog__item-image {
+  display: block;
+  max-width: 100%;
 }
 
 .catalog__info-description {
-  font-weight: $font-weight;
+  margin-left: 0;
+  text-align: right;
   font-size: 12px;
   line-height: 16px;
-  color: $base-color-text;
-  margin-left: 0;
-  justify-self: end;
+  border-bottom: 1px solid #cdcdcd;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 28px;
   }
 }
 
-.card__info {
-  text-align: center;
-  max-width: 320px;
-  margin-bottom: 25px;
-  border-bottom: 1px solid #ebebeb;
+.catalog__button {
+  grid-column: 1/-1;
+  margin-top: 17px;
+  align-self: flex-end;
 
   @media (min-width: $tablet-width) {
-    border: none;
-    width: 324px;
+    margin-top: 32px;
+    padding: 10px 14px;
+    font-size: 16px;
+    line-height: 20px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 245px;
+    width: 169px;
+    margin: 0 auto;
+  }
+}
+
+.catalog__item-more {
+  display: grid;
+  grid-template-columns: 140px 140px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 25px;
+  border-top: 1px solid #ebebeb;
+  border-bottom: 1px solid #ebebeb;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 250px;
+    grid-template-rows: 159px min-content auto;
+    align-self: flex-end;
+    padding: 0 35px 40px;
+    min-height: 429px;
+    border: 2px solid #f2f2f2;
+
+    &:nth-child(odd) {
+      grid-column: 1/3;
+    }
+
+    &:nth-child(even) {
+      grid-column: 3/5;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-rows: 148px min-content auto;
+    padding: 0;
+    padding-bottom: 40px;
+
+    &:nth-child(odd) {
+      grid-column: auto;
+    }
+
+    &:nth-child(even) {
+      grid-column: auto;
+    }
   }
 }
 
 .catalog__item-show-more-title {
   grid-column: 1/-1;
   justify-self: center;
-  margin-bottom: 8px;
-  margin-top: 25px;
-
-  br {
-    display: none;
-  }
-
-  &::before {
-    content: " ";
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 23px;
-    width: 30px;
-    height: 30px;
-    background-image: url("../../icons/plus-icon.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+  margin: 8px 0;
+  padding: 0;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 23px;
+    margin-top: 0;
+    margin-bottom: 20px;
+    padding: 0 38px;
     text-align: center;
     font-size: 20px;
-
-    &::before {
-      margin-top: 50px;
-      width: 60px;
-      height: 60px;
-    }
+    align-self: flex-start;
   }
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 25px;
     padding: 0 38px;
-    margin-bottom: 26px;
-
-    &::before {
-      margin: 0 55px 40px;
-    }
   }
 }
 
@@ -212,20 +289,18 @@
   grid-column: 1/-1;
   justify-self: center;
   margin: 0;
-  margin-bottom: 21px;
+  margin-bottom: 4px;
   font-size: 12px;
   line-height: 16px;
 
   @media (min-width: $tablet-width) {
+    padding: 0 20px;
     text-align: center;
     font-size: 16px;
     line-height: 18px;
-    width: 170px;
-    margin: 0 auto;
-    margin-bottom: 82px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 90px;
+    padding: 0 38px;
   }
 }
