--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,7 +1,28 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
+.map {
+  position: relative;
+  margin: 0 auto;
+}
 
-.map-image {
-  object-fit: cover;
+.map__container {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.map__image {
+  grid-column: 1/-1;
+  grid-row: 2/-1;
+}
+
+.map__iframe {
+  grid-column: 1/-1;
+  grid-row: 2/-1;
+  display: block;
   width: 100%;
+  height: 362px;
+  border: none;
+  z-index: 1;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
 }
