--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -1,17 +1,28 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
+.navigation {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  padding: 13px 20px 15px;
+  width: 320px;
+  font-family: $secondary-font;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  background-color: #ffffff;
 
-.main-nav {
-  width: 100%;
-  background: #ffffff;
-  z-index: 3;
+  @media (min-width: $tablet-width) {
+    padding: 25px 30px 0;
+    width: 768px;
+    font-size: 18px;
+  }
 
-  &--change {
-    border-bottom: 1px solid #d9d9d9;
-
-    @media (min-width: $tablet-width) {
-      border: none;
-    }
+  @media (min-width: $desktop-width) {
+    justify-content: space-between;
+    padding: 55px 0 29px;
+    width: 1220px;
+    background-color: transparent;
   }
 }
 
@@ -19,14 +30,13 @@
   display: flex;
   align-items: center;
   margin-right: auto;
-  padding-left: 20px;
 
   &:hover {
     opacity: 0.8;
   }
 
   &:focus-visible {
-    outline-color: $bg-color-green;
+    outline-color: $bg-basic-green;
   }
 
   &:active {
@@ -34,8 +44,13 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-left: 0;
+    margin-right: 94px;
   }
+}
+
+picture {
+  display: flex;
+  font-size: 0;
 }
 
 .navigation__logo-text {
@@ -46,137 +61,104 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 14px;
     width: 118px;
+    height: 21px;
   }
 }
 
-.main-nav__user {
-  padding-top: 13px;
+.navigation__wrapper {
+  @media (max-width: $desktop-width) {
+    max-width: 568px;
+  }
+}
+
+.navigation__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  @media (max-width: $tablet-width) {
+    display: none;
+
+    &--show {
+      position: absolute;
+      top: 66px;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      background-color: #ffffff;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     display: flex;
-    padding-top: 25px;
-    padding-left: 30px;
+    flex-wrap: wrap;
+    gap: 0 32px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 110px;
-    padding-right: 110px;
+    gap: 5px 33px;
+  }
+}
+
+.navigation__item {
+  justify-items: center;
+  border-top: 1px solid #e6e6e6;
+
+  @media (min-width: $tablet-width) {
+    border-top: none;
+
+    &--current {
+      border-bottom: 2px solid $bg-basic-green;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    &:last-child .navigation__link {
+      padding-right: 0;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    &--current {
+      border-color: #ffffff;
+    }
+
+    &--current-catalog {
+      border-color: $bg-basic-green;
+    }
   }
 }
 
 .navigation__link {
   display: block;
+  padding: 22px 10px 24px;
   color: #000000;
   text-decoration: none;
-
 
   &:hover {
     opacity: 0.6;
   }
 
   &:focus-visible {
-    outline-color: $bg-color-green;
+    outline-color: $bg-basic-green;
   }
 
   &:active {
     opacity: 0.3;
   }
 
+  @media (min-width: $tablet-width) {
+    padding: 12px 0;
+  }
+
   @media (min-width: $desktop-width) {
-    color: $additional-color;
+    color: #ffffff;
     font-size: 20px;
+
+    &--color {
+      color: #000000;
+    }
   }
-}
-
-.main-nav__user--closed .main-nav__toggle::before {
-  content: "";
-  position: absolute;
-  width: 24px;
-  height: 2px;
-  background-color: #000000;
-  box-shadow: 0 6px 00 #000000, 0 12px 00 #000000;
-  right: 6px;
-  top: 0;
-}
-
-.main-nav__user--opened .main-nav__toggle {
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 2px;
-    background-color: #000000;
-    right: 6px;
-  }
-
-  &::before {
-    transform: rotate(45deg);
-  }
-
-  &::after {
-    transform: rotate(-45deg);
-  }
-}
-
-.main-nav__user--closed .site-list__item {
-  display: none;
-
-  @media (min-width: $tablet-width) {
-    display: block;
-  }
-}
-
-.main-nav__toggle {
-  position: absolute;
-  background-color: #ffffff;
-  border: none;
-  background-repeat: no-repeat;
-  width: 18px;
-  height: 18px;
-  background-size: 18px 18px;
-  cursor: pointer;
-  right: 20px;
-  top: 25px;
-
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
-}
-
-.main-nav__wrapper {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin: 0;
-    margin-left: auto;
-  }
-}
-
-.main-nav__list {
-  margin: 0;
-  padding: 0;
-}
-
-
-.main-nav__user--nojs .main-nav__toggle {
-  display: none;
-}
-
-.main-nav__user--nojs .main-nav {
-  position: static;
-  min-height: 0;
-}
-
-.main-nav--nojs .site-list__item {
-  display: block;
-}
-
-.main-nav--nojs .user-list__item {
-  display: block;
 }
