--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -1,14 +1,11 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
-
 .programs {
-  margin-top: 20px;
+  padding-top: 20px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 0;
+    padding-top: 0;
   }
 
   @media (min-width: $desktop-width) {
-    margin-top: 82px;
+    padding-top: 82px;
   }
 }
