--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,31 +1,24 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
-
-
 .promo {
-  text-align: center;
-  font-family: $additional-font;
-  line-height: 36px;
-  color: $additional-color;
-  background-size: cover;
-  background-position: 50%;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85) 60%, #ffffff 40%), url("../../images/index-images/index-mobile/background-mobile@2x.jpg");
-  background-repeat: no-repeat;
   padding-top: 27px;
+  text-align: center;
+  font-family: $secondary-font;
+  line-height: 36px;
+  color: #ffffff;
 
   @media (min-width: $tablet-width) {
-    background-image: none;
     text-align: left;
-    display: grid;
+    background-color: #ffffff;
+    background-image: none;
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("../../images/index-images/index-desktop/background-desktop@2x.jpg");
     background-color: transparent;
   }
 }
 
 .promo__container {
+  padding: 0 20px;
+
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-rows: auto min-content 1fr;
@@ -41,39 +34,39 @@
 }
 
 .promo__title {
-  font-size: 36px;
+  margin: 0;
   margin-bottom: 25px;
+  font-weight: 400;
+  font-size: 36px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 40px;
     font-size: 60px;
     line-height: 60px;
-    color: $optional-color;
+    color: #000000;
   }
 }
 
 .promo__description {
-  font-size: 14px;
-  line-height: 14px;
-  text-transform: $text-transform;
   margin: 0;
   margin-bottom: 29px;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 50px;
-    align-self: flex-start;
-    font-size: 20px;
-    line-height: 20px;
-    color: $optional-color;
     grid-column: 1/-1;
     grid-row: 2/2;
+    align-self: flex-start;
+    margin-bottom: 50px;
+    font-size: 20px;
+    line-height: 20px;
+    color: #000000;
     z-index: 2;
   }
 }
 
 .promo__image {
-  display: block;
-
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
     grid-row: 2/4;
@@ -86,19 +79,5 @@
     margin-left: -73px;
     grid-column: 2/-1;
     grid-row: 1/-1;
-  }
-}
-
-.promo__link {
-  padding: 10px 64px;
-  display: block;
-
-  @media (min-width: $tablet-width) {
-    grid-area: 3/1;
-    padding: 14px 24px;
-    margin-bottom: auto;
-    margin-right: auto;
-    width: 242px;
-    text-align: center;
   }
 }
