--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,17 +1,17 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
-
 .social {
-  padding: 20px 74px;
-  list-style-type: none;
-  margin: 0;
   display: flex;
-  gap: 24px;
-  justify-self: center;
-  border-bottom: 1px solid #d9d9d9;
+  justify-content: center;
+  column-gap: 24px;
+  margin: 0;
+  padding: 17px 0;
+  list-style-type: none;
   border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
+    padding: 0;
+    grid-column: 2/3;
+    justify-self: center;
     border: none;
   }
 }
@@ -21,7 +21,6 @@
   width: 28px;
   height: 22px;
   background-color: #666666;
-
 
   &--vkontakte {
     mask-image: url("../../icons/stack.svg#vkontakte");
@@ -36,15 +35,15 @@
   }
 
   &:hover {
-    background-color: $bg-color-green;
+    background-color: $bg-basic-green;
   }
 
   &:focus-visible {
-    background-color: $bg-color-green;
+    background-color: $bg-basic-green;
   }
 
   &:active {
-    background-color: $bg-color-green;
+    background-color: $bg-basic-green;
     opacity: 0.3;
   }
 }
