--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,65 +1,123 @@
-@use "../common/fonts.scss" ;
-@use "../common/variables.scss" ;
-
 .subscribe {
-  margin-top: 40px;
+  font-family: $secondary-font;
+  line-height: 24px;
+  color: #000000;
+}
+
+.subscribe__container {
+  padding: 48px 20px 38px;
 
   @media (min-width: $tablet-width) {
-    margin-top: 80px;
+    padding: 85px 30px 65px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 94px 0;
   }
 }
 
 .subscribe__title {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 24px;
-  line-height: 24px;
-  color: $optional-color;
+  position: relative;
+  margin: 0;
   margin-bottom: 32px;
+  width: fit-content;
+  font-weight: 400;
+  font-size: 24px;
+  background-color: #ffffff;
+  box-shadow: -40px 0 0 0 #ffffff, 40px 0 0 0 #ffffff;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 14;
+    right: 0;
+    width: 100vw;
+    height: 2px;
+    background-color: $bg-basic-green;
+    box-shadow: 100vw 0 0 0 $bg-basic-green;
+    z-index: -1;
+  }
 
   @media (min-width: $tablet-width) {
+    margin-left: 40px;
+    margin-bottom: 65px;
     font-size: 32px;
     line-height: 32px;
-    margin-bottom: 66px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 0;
+    margin-bottom: 70px;
+    font-size: 40px;
+    line-height: 40px;
   }
 }
 
 .subscribe__description {
-  font-family: $additional-font;
-  font-weight: $font-weight;
-  font-size: 16px;
-  line-height: 24px;
-  color: $optional-color;
+  margin: 0;
   margin-bottom: 24px;
-
+  text-align: center;
+  font-size: 16px;
 
   @media (min-width: $tablet-width) {
+    padding: 0 50px;
     font-size: 24px;
     line-height: 32px;
-    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    // margin-bottom: 20px;
   }
 }
 
 .subscribe__form {
   @media (min-width: $tablet-width) {
     display: flex;
-    max-height: 56px;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 
-.subscribe__field {
-  font-size: 20px;
-  line-height: 30px;
-  font-family: $additional-font;
+.subscribe__input {
+  margin-bottom: 13px;
   padding: 13px;
+  font-family: $secondary-font;
+  width: 100%;
+  font-weight: 400;
+  font-size: 20px;
   color: #444444;
-  border: 1px solid #cdcdcd;
-  margin-bottom: 16px;
-  width: 280px;
+  text-transform: uppercase;
+  border: 1px solid #e7e7e7;
+  box-sizing: border-box;
+
+  &:hover {
+    border-color: #cdcdcd;
+  }
+
+  &:focus-visible {
+    border-color: #444444;
+  }
 
   @media (min-width: $tablet-width) {
     width: 376px;
-    max-height: 56px;
-    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 500px;
+  }
+}
+
+.subscribe__button {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 100%;
+  font-size: 20px;
+  line-height: 26px;
+  border: none;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    padding: 15px;
+    width: 256px;
   }
 }
