--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+.page__body {
+  font-family: $primary-font;
+  font-weight: 400;
+  color: $color-base-text;
+  min-width: 320px;
+  background-color: #ffffff;
+  margin: 0;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
