--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,13 +1,15 @@
 /* здесь используйте глобальные переменные */
-$base-color-text: #444444;
-$bg-color-green:  #68b738;
-$additional-color: #ffffff;
-$optional-color: #000000;
+
+// fonts
+$primary-font: "Lato", "Arial", sans-serif;
+$secondary-font: "Oswald", "Arial", sans-serif;
+
+// colors
+$color-base-text: #444444;
+$bg-basic-green: #68b738;
+
+// viewports
+$mobile-width-only: 767px;
+$tablet-width-only: 1439px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
-/* здесь используйте глобальные переменные */
-$ad-special_dark-grey: #222222;
-$base-font-size-text: 14px;
-$base-font-size-text-desctop: 16px;
-$base-line-height: 18px;
-$text-transform: uppercase;
