--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -3,6 +3,7 @@
   padding: 10px;
   text-align: center;
   font-family: $secondary-font;
+  max-width: 400px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -40,7 +41,6 @@
   }
 
   @media (min-width: $tablet-width) {
-    // display: inline-block;
     padding: 14px;
     font-size: 20px;
     line-height: 26px;
