--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -105,6 +105,15 @@
   grid-column: 1/2;
   grid-row: 1/3;
   place-self: center center;
+  transition: transform 0.3s cubic-bezier(0.75, 0.82, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.1);
+  }
+
+  &:active {
+    transform: scale(1);
+  }
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
@@ -126,6 +135,14 @@
   grid-column: 2/3;
   grid-row: 1/2;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.65;
+  }
+
+  &:active {
+    opacity: 0.35;
+  }
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
