--- a/source/styles/blocks/history.scss
+++ b/source/styles/blocks/history.scss
@@ -14,7 +14,7 @@
 }
 
 .history__container {
-  padding: 25px 20px;
+  padding: 25px 20px 35px;
 
   @media (min-width: $tablet-width) {
     display: grid;
